--- a/jwt_authentication/templates/login.html
+++ b/jwt_authentication/templates/login.html
@@ -4,20 +4,20 @@
     <title>Login</title>
 </head>
 <body>
-    <h2>Login Page</h2>
 
-    <form method="POST">
-        <label>Username:</label><br>
-        <input type="text" name="username" required><br><br>
+<h2>Login</h2>
 
-        <label>Password:</label><br>
-        <input type="password" name="password" required><br><br>
+<form method="POST" action="/login">
+    <label>Username:</label><br>
+    <input type="text" name="username" required><br><br>
 
-        <button type="submit">Login</button>
-    </form>
+    <label>Password:</label><br>
+    <input type="password" name="password" required><br><br>
 
-    <p>Don't have an account?
-        <a href="{{ url_for('signup') }}">Signup</a>
-    </p>
+    <button type="submit">Login</button>
+</form>
+
+<p>New user? <a href="/signup">Signup</a></p>
+
 </body>
 </html>
