--- a/jwt_authentication/templates/signup.html
+++ b/jwt_authentication/templates/signup.html
@@ -4,20 +4,20 @@
     <title>Signup</title>
 </head>
 <body>
-    <h2>Signup Page</h2>
 
-    <form method="POST">
-        <label>Username:</label><br>
-        <input type="text" name="username" required><br><br>
+<h2>Signup</h2>
 
-        <label>Password:</label><br>
-        <input type="password" name="password" required><br><br>
+<form method="POST" action="/signup">
+    <label>Username:</label><br>
+    <input type="text" name="username" required><br><br>
 
-        <button type="submit">Signup</button>
-    </form>
+    <label>Password:</label><br>
+    <input type="password" name="password" required><br><br>
 
-    <p>Already have an account?
-        <a href="{{ url_for('login') }}">Login</a>
-    </p>
+    <button type="submit">Signup</button>
+</form>
+
+<p>Already have an account? <a href="/login">Login</a></p>
+
 </body>
 </html>
