--- a/jwt_authentication/templates/dashboard.html
+++ b/jwt_authentication/templates/dashboard.html
@@ -10,8 +10,7 @@
 <p><b>Your JWT Token:</b></p>
 <textarea rows="6" cols="80">{{ token }}</textarea>
 
-<p>Use this token in Authorization header:</p>
-<pre>Authorization: Bearer YOUR_TOKEN</pre>
+<p> JWT TOKEN SUCCESSFULLY GENERATED: </p>
 
 </body>
 </html>
